Tested sounds with huey/dewey in game and fixed some issues with the actor logging.